@@ -76,17 +76,17 @@ plotDedup <- function(mat, sampleName="", legend=TRUE){
   sel.colours <- brewer.pal(12,"Paired")[c(8,7,2,1,3)] 
 
   gp <- ggplot(mat, aes(x=p, as.numeric(count), fill=lab)) +
-    geom_bar(width=.7,stat="identity", colour="gray") +
+    geom_bar(width=.7,stat="identity", colour="gray") + theme_minimal() + 
       theme(axis.title=element_text(face="bold", size=6), axis.ticks = element_blank(), axis.text.y = element_text(size=5), axis.text.x = element_blank()) +
           xlab(sampleName) + ylab("Read Counts")  +
             geom_text(aes(x=p, y=as.numeric(pos), label=paste(perc,"%")),fontface="bold", size=2) +
                 ggtitle("Valid Pairs - duplicates and contact ranges") + theme(plot.title = element_text(lineheight=.8, face="bold", size=6))
 
   if (legend){
-    gp = gp + scale_fill_manual(values=sel.colours, labels = c("Duplicates (%)", "Valid Interactions (%)", "Cis short-range (<20kb) (%)", "Cis long-range contacts (>20kb) (%)", "Trans Contacts (%)")) +
+    gp = gp + scale_fill_manual(values=sel.colours, labels = c("Duplicates (%)", "Valid Interactions (%)", "Cis long-range (>20kb) (%)", "Cis short-range contacts (<20kb) (%)", "Trans Contacts (%)")) +
                                     guides(fill=guide_legend(title="")) +
-                                        theme(plot.margin=unit(x=c(1,0,0,0), units="cm"), legend.position="bottom", legend.margin=margin(.5,unit="cm"),
-                                              legend.text=element_text(size=4))
+                                        theme(plot.margin=unit(x=c(1,0,0,0), units="cm"), legend.position="right", legend.margin=margin(.5,unit="cm"),
+                                              legend.text=element_text(size=5))
   }else{
     gp = gp + scale_fill_manual(values=sel.colours) + theme(plot.margin=unit(c(1,0,1.9,0),"cm"))+ guides(fill=FALSE)
   }
@@ -99,7 +99,7 @@ plotDistanceHist <- function(mat, sampleName="", n=""){
   require(grid)
   
   gp <- ggplot(mat, aes(x=mids, y=allcounts))+
-     geom_bar(stat="identity", alpha=.5, color="darkgray", fill="blue4")+
+     geom_bar(stat="identity", alpha=.5, color="darkgray", fill="blue4")+theme_minimal()+
       theme(axis.title=element_text(face="bold", size=6), axis.text.y = element_text(size=5), axis.text.x = element_text(size=5)) + 
       scale_x_continuous(breaks=c(seq(0, 500, by=50), seq(from = 600, to = 1500, by = 200), 1500), labels=c(seq(0, 500, by=50), seq(from = 600, to = 1500, by = 200), ">1500"))+
       xlab(sampleName) + ylab(paste0("Read Counts - subset of ", n, " interactions")) +
