@@ -97,30 +97,26 @@ getPairMat <- function(x, x.perc, rmMulti=0, rmSingle=0){
 ## legend = logical. If true, the legend is plotted
 ##
 plotPairStat <- function(mat, xlab="", legend=TRUE){
-  require(RColorBrewer)
-  require(ggplot2)
-  require(grid)
-
-  ## update labels for plot
-  #mat$lab <- paste0(gsub("_", " ", mat$lab)," (%)")
-
-  gp <-ggplot(mat, aes(x=p, as.numeric(count), fill=lab)) +
-    geom_bar(width=.7,stat="identity", colour="gray") + 
-      theme(axis.title=element_text(face="bold", size=6), axis.ticks = element_blank(),  axis.text.y = element_text(size=5), axis.text.x = element_text(size=6))+
-        xlab(xlab) + ylab("Read Counts") +
-            scale_x_discrete(breaks=c("1", "2"), labels=c("All Pairs","Filtered Pairs"))+
-              geom_text(aes(x=p, y=as.numeric(pos), label=paste(perc,"%")),fontface="bold", size=2) +
-                ggtitle("Statistics after read pairing") + theme(plot.title = element_text(lineheight=.8, face="bold", size=6))
-
-  if (legend){
-    scol <- mat$selcol
-    names(scol) <- mat$lab
-    gp = gp + scale_fill_manual(values=scol) + guides(fill=guide_legend(title="")) + theme(plot.margin=unit(x=c(1,0,0,0), units="cm"), legend.position="right", legend.margin=margin(.5, unit="cm"),
-                                                          legend.text=element_text(size=4))
-  }else{
-    gp = gp + scale_fill_manual(values=as.character(col)) + theme(plot.margin=unit(c(1,0,1.9,0),"cm"))+ guides(fill=FALSE)
-  }
-  gp
+    require(RColorBrewer)
+    require(ggplot2)
+    require(grid)
+    
+    gp <-ggplot(mat, aes(x=p, as.numeric(count), fill=lab)) + geom_bar(width=.7,stat="identity", colour="gray") + theme_minimal() +
+            theme(axis.title=element_text(face="bold", size=6), axis.ticks = element_blank(),  axis.text.y = element_text(size=5), axis.text.x = element_text(size=6))+
+                xlab(xlab) + ylab("Read Counts") +
+                    scale_x_discrete(breaks=c("1", "2"), labels=c("All Pairs","Filtered Pairs"))+
+                        geom_text(aes(x=p, y=as.numeric(pos), label=paste(perc,"%")),fontface="bold", size=2) +
+                            ggtitle("Statistics after read pairing") + theme(plot.title = element_text(lineheight=.8, face="bold", size=6))
+    
+    if (legend){
+        scol <- mat$selcol
+        names(scol) <- mat$lab
+        gp = gp + scale_fill_manual(values=scol) + guides(fill=guide_legend(title="")) + theme(plot.margin=unit(x=c(1,0,0,0), units="cm"),
+                                                              legend.position="right", legend.margin=margin(.5, unit="cm"),legend.text=element_text(size=5))
+    }else{
+        gp = gp + scale_fill_manual(values=as.character(col)) + theme(plot.margin=unit(c(1,0,1.9,0),"cm"))+ guides(fill=FALSE)
+    }
+    gp
 }
 
 ####################################
